--- a/Project01/project01.html
+++ b/Project01/project01.html
@@ -20,8 +20,11 @@
         <input type="password" name="password" id="password" placeholder="Enter Your password">
 
         </div>
-        <button>sign in</button>
+        <button>Sign in</button>
+        <!-- <button > don't have an account?<b>Register here</b> </button> -->
+        <a class="container" href="register.html"> don't have an account?<b>Register here</b></a>
     </div>
+    
     <!-- Ready to use Font Awesome. Activate interlock. Dynotherms - connected. Infracells - up. Icons are go! -->
   </body>
 </html>
